# visuomotor-learning

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: motorBabbling.ini  reachObjMultiDemo.ini
app/scripts/: multisensory_integration_datadumper_icubSim.xml  multisensory_integration_icubSim.xml  visuomotor_learning_datadumper_icub.xml  visuomotor_learning_datadumper_icubSim.xml
modules/: CMakeLists.txt
modules/collectData/: CMakeLists.txt  collectData.cpp  collectData.h  collectData.thrift  collectDataModule.cpp
modules/motorBabbling/: CMakeLists.txt  babblingModule.cpp  motorBabbling.cpp  motorBabbling.h  motorBabbling.thrift
modules/reachObjMultiDemo/: CMakeLists.txt  reachObjModule.cpp  reachObjMultiDemo.cpp  reachObjMultiDemo.h  reachObjMultiDemo.thrift
modules/skinEventsAggregator/: CMakeLists.txt  skinEventsAggregThread.cpp  skinEventsAggregThread.h  skinEventsAggregator.cpp
visuomotor_learning/: __init__.py  default_config.py  train.py
