# Copyright: (C) 2019 iCub Facility - Istituto Italiano di Tecnologia
# Author: NGUYEN Dong Hai Phuong <pnguyen@informatik.uni-hamburg.de>
# CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT

add_subdirectory(motorBabbling)
add_subdirectory(reachObjMultiDemo)
add_subdirectory(skinEventsAggregator)
add_subdirectory(collectData)

